# exposure-checker

./: .gitignore  ExposureChecker.desktop  GETTING-STARTED.md  LICENSE  POSTMORTEM.md  README.md  SECURITY.md  exposure_checker.py  exposure_checker.spec  exposure_checker_ui.py  gitignore  gullwing.spec  gullwing_splash.py  gullwing_ui.py  install.ps1  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-release.yml  security-scan.yml
docs/: RELEASE-SIGNING.md  ROADMAP.md
exposure_checker/: __init__.py  __main__.py  _cli.py  _core.py  _elevate.py  _notify.py  _remediate.py  _report.py  _schedule.py  _session.py  _storage.py
exposure_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
exposure_checker/checks/: benchmark.py  cleaner.py  overclock.py  performance.py  portscan.py  security.py
exposure_checker/gui/: __init__.py  app.py  splash.py  theme.py
exposure_checker/webui/: __init__.py  app.py  bridge.py
exposure_checker/webui/assets/: app.js  index.html  style.css
launchers/: ExposureChecker.desktop  Gullwing.desktop  run.sh
packaging/: entitlements.plist  gullwing-hud.spec  gullwing.spec  requirements-build.in  requirements-build.txt  requirements.txt
scripts/: generate_icons.py  install.ps1  install.sh
tests/: test_checks.py  test_injection_safety.py  test_new_features.py
