[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gullwing"
version = "1.0.8"
description = "Self-hosted security scanner: port scan, SSH audit, auth log analysis, TLS cert expiry, CVE scan, and more"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "cryptography>=38",   # TLS certificate expiry (check_tls)
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
gullwing    = "exposure_checker:main"
gullwing-ui = "gullwing_ui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["exposure_checker*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
