[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gullwing"
version = "1.0.8"
description = "Self-hosted security scanner: port scan, SSH audit, auth log analysis, TLS cert expiry, CVE scan, and more"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "cryptography>=38",   # TLS certificate expiry (check_tls)
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]
# Cinematic pygame splash screen. Optional: the app falls back to the built-in
# Tkinter splash if pygame is not installed. pygame-ce is the community fork —
# a drop-in replacement (import pygame) with much better wheel coverage for new
# Python versions. numpy powers the per-pixel water reflection and filmic
# post-processing; without it the splash still runs with a lighter reflection.
splash = [
    "pygame-ce>=2.4",
    "numpy>=1.23",
]

[project.scripts]
gullwing    = "exposure_checker:main"
gullwing-ui = "gullwing_ui:main"

[tool.setuptools]
# Top-level scripts must be exposed as modules or the `gullwing-ui` entry point
# (gullwing_ui:main) fails with ModuleNotFoundError when run from anywhere but
# the repo directory.
py-modules = ["gullwing_ui", "gullwing_splash"]

[tool.setuptools.packages.find]
where = ["."]
include = ["exposure_checker*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
