[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gullwing"
dynamic = ["version"]
description = "Self-hosted security scanner: port scan, SSH audit, auth log analysis, TLS cert expiry, CVE scan, and more"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "cryptography>=38",      # TLS certificate expiry (check_tls)
    "customtkinter>=5.2",    # FontManager for bundled OFL fonts
    "pillow>=9.0",           # icon loading (ImageTk) + icon generation
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "pip-tools>=7",
]
# Cinematic pygame splash screen. Optional: the app falls back to the built-in
# Tkinter splash if pygame is not installed. pygame-ce is the community fork —
# a drop-in replacement (import pygame) with much better wheel coverage for new
# Python versions. numpy powers the per-pixel water reflection and filmic
# post-processing; without it the splash still runs with a lighter reflection.
splash = [
    "pygame-ce>=2.4",
    "numpy>=1.23",
]

[project.scripts]
gullwing    = "exposure_checker:main"
gullwing-ui = "exposure_checker.gui.app:main"

[tool.setuptools.dynamic]
version = {attr = "exposure_checker._core.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["exposure_checker*"]

[tool.setuptools.package-data]
"exposure_checker" = ["gui/assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
